--- a/react/lecture/src/app/components/PageLayout/index.module.css
+++ b/react/lecture/src/app/components/PageLayout/index.module.css
@@ -6,25 +6,18 @@
 .sidebar {
   width: 200px;
   padding: 8px 12px;
-  border-right: 1px solid #000;
+  border-right: 1px solid var(--color-border);
+  display: flex;
+  flex-direction: column;
 }
 
 .links {
-  margin-top: 40px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  flex: 1;
 }
 
 .content {
   padding: 8px 12px;
-}
-
-ol.links {
-  margin: 0;
-  padding: 0;
-}
-
-li.linkItem {
-  list-style: none;
 }
